--- a/data/config.env
+++ b/data/config.env
@@ -1,5 +1,5 @@
-PORT = 4000
+PORT = 4002
 
-MONGO_URI = mongodb://127.0.0.1:27017
+MONGO_URI = mongodb+srv://nodejs:Hello@cluster0.tmz4uoa.mongodb.net/?retryWrites=true&w=majority
 
 JWT_SECRET = klsajkfl
